# yahoo-finance-mcp

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  SPECS.md  TODO.md  compose.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
src/yahoo_finance_mcp/: __init__.py  __main__.py  cache.py  client.py  errors.py  formatting.py  server.py
tests/: conftest.py  smoke.py  test_cache.py  test_cli.py  test_client.py  test_formatting.py  test_server.py  test_tools_integration.py
