[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yahoo-finance-mcp"
version = "0.1.0"
description = "An MCP server exposing Yahoo Finance data (via yfinance) over stdio."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Benedikt Oswald" }]
keywords = ["mcp", "yahoo-finance", "yfinance", "stocks", "finance"]
dependencies = [
    "mcp[cli]>=1.27",
    "yfinance>=1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
yahoo-finance-mcp = "yahoo_finance_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/yahoo_finance_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
