[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yahoo-finance-mcp"
version = "0.1.0"
description = "An MCP server exposing Yahoo Finance data (via yfinance) over stdio."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Benedikt Oswald" }]
keywords = ["mcp", "yahoo-finance", "yfinance", "stocks", "finance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "mcp[cli]>=1.27",
    "yfinance>=1.4",
]

[project.urls]
Homepage = "https://github.com/<OWNER>/yahoo-finance-mcp"
Repository = "https://github.com/<OWNER>/yahoo-finance-mcp"
Issues = "https://github.com/<OWNER>/yahoo-finance-mcp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
yahoo-finance-mcp = "yahoo_finance_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/yahoo_finance_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
