[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yahoo-finance-mcp"
version = "0.1.0"
description = "An MCP server exposing Yahoo Finance data (via yfinance) over stdio."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Benedikt Oswald" }]
keywords = ["mcp", "yahoo-finance", "yfinance", "stocks", "finance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "mcp[cli]>=1.28.0",
    "yfinance>=1.4",
]

[project.urls]
Homepage = "https://github.com/benethos-hub/yahoo-finance-mcp"
Repository = "https://github.com/benethos-hub/yahoo-finance-mcp"
Issues = "https://github.com/benethos-hub/yahoo-finance-mcp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.6",
    "mypy>=2.1.0",
]

[project.scripts]
yahoo-finance-mcp = "yahoo_finance_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/yahoo_finance_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["yahoo_finance_mcp"]
branch = true

[tool.coverage.report]
show_missing = true

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
# A pragmatic, not-too-noisy rule set.
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "W",    # pycodestyle warnings
]

[tool.mypy]
python_version = "3.11"
files = ["src"]
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true

# yfinance and pandas ship without (complete) type stubs.
[[tool.mypy.overrides]]
module = ["yfinance.*", "pandas", "pandas.*"]
ignore_missing_imports = true
